<resources>
    <string name="app_name">Yemekhane</string>
    <string name="ana_sınıfı">Ana Sınıfı</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>

    <string-array name="Time">
        <item>Günlük</item>
        <item>Haftalık</item>
        <item>Aylık</item>
    </string-array>

    <array name="days">
        <item>Pazar</item>
        <item>Pazartesi</item>
        <item>Salı</item>
        <item>Çarşamba</item>
        <item>Perşembe</item>
        <item>Cuma</item>
        <item>Cumartesi</item>
    </array>

    <string name="data_not_found">Veri Bulunamadı</string>
    <string name="saved">Kaydedildi</string>
    <string name="delete">Silindi</string>
    <string name="message_connect_to_internet">İnternet Bağlantınızı Kontrol Edin</string>
    <string name="time_out">Zaman Aşımı</string>
    <string name="empty" translatable="false">empty</string>
    <string name="changed">Değiştirildi</string>
    <string name="mail">Mail</string>
    <string name="note">Notunuzu Buraya Giriniz</string>
    <string name="cancel">İptal Et</string>
    <string name="create">Kaydet</string>
    <string name="create_note">Not Oluştur</string>
    <string name="deleted_success">Tarihi geçmiş öğrenciler silindi</string>
    <string name="hamburger">Hamburger</string>
    <string name="pizza">Pizza</string>
    <string name="kofte_ekmek">Köfte Ekmek</string>
    <string name="mant">Mantı</string>
    <string name="doner_ekmek">Döner Ekmek</string>
    <string name="pide">Pide</string>
    <string name="tavuklu_pilav">Tavuklu Pilav</string>
    <string name="corba">Çorba</string>
    <string name="patates_kofte">Patates - Köfte</string>
    <string name="sade_makarna">Sade Makarna</string>
    <string name="kofte_makarna">Köfte-Makarna</string>
    <string name="kofte_pilav">Köfte-Pilav</string>
    <string name="gozleme">Gözleme</string>
    <string name="nugget_pilav">Nugget-Pilav</string>
    <string name="clas">Sınıf</string>
    <string name="name_surname">İsim-Soyisim</string>
    <string name="time">Süre</string>
    <string name="menu">Menü</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="ı">ı</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="back">Geri</string>
</resources>
