<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".activities.MenuActivity">

    <LinearLayout style="@style/llMenu">

        <Button
            style="@style/btnMenu"
            android:text="@string/hamburger" />

        <Button
            style="@style/btnMenu"
            android:text="@string/pizza" />

        <Button
            style="@style/btnMenu"
            android:text="@string/kofte_ekmek" />

        <Button
            style="@style/btnMenu"
            android:text="@string/mant" />


    </LinearLayout>


    <LinearLayout style="@style/llMenu">

        <Button
            style="@style/btnMenu"
            android:text="@string/doner_ekmek" />

        <Button
            style="@style/btnMenu"
            android:text="@string/pide" />

        <Button
            style="@style/btnMenu"
            android:text="@string/tavuklu_pilav" />

        <Button
            style="@style/btnMenu"
            android:text="@string/corba" />

    </LinearLayout>


    <LinearLayout style="@style/llMenu">

        <Button
            style="@style/btnMenu"
            android:text="@string/patates_kofte" />

        <Button
            style="@style/btnMenu"
            android:text="@string/sade_makarna" />

        <Button
            style="@style/btnMenu"
            android:text="@string/kofte_makarna" />


    </LinearLayout>

    <LinearLayout style="@style/llMenu">

        <Button
            style="@style/btnMenu"
            android:text="@string/kofte_pilav" />

        <Button
            style="@style/btnMenu"
            android:text="@string/gozleme" />

        <Button
            style="@style/btnMenu"
            android:text="@string/nugget_pilav" />
    </LinearLayout>


</LinearLayout>